# ArtCIR-thesis

./: .gitmodules  LICENSE  pyproject.toml
jobs/eval/: eval_zeroshot.job  eval_zeroshot.sh  eval_zeroshot_qwen3vl.job
jobs/eval/eval_zeroshot/: embed_artcir_qwen3vl.job  eval_zeroshot.job
notebooks/: ejemplo.ipynb  example.ipynb
notebooks/lightning_logs/version_0/checkpoints/: epoch=0-step=4.ckpt
scripts/eval/eval_zeroshot/: embed_artcir_qwen3vl.py  eval_artcir.py  eval_artcir_qwen3vl.py
src/artcir_thesis/: __main__.py  cli.py
src/artcir_thesis/dataset/: __init__.py  datasets_artcir.py
src/artcir_thesis/milvus/: __init__.py  wrapper.py
tests/: test_base.py
tools/: example.py
